--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" />
     <title>iXcampus</title>
+    <link rel="icon" href="/cropped-favicon-test-32x32.png" sizes="32x32">
+    <link rel="icon" href="/cropped-favicon-test-192x192.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="/cropped-favicon-test-180x180.png">
   </head>
   <body>
     <div id="root"></div>
